--- a/package.json
+++ b/package.json
@@ -3,29 +3,32 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.9.0"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.2.2",
     "han-css": "^3.3.0",
-    "hexo": "^3.7.1",
+    "hexo": "^3.9.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
-    "hexo-deployer-git": "^0.3.1",
+    "hexo-deployer-git": "^1.0.0",
     "hexo-front-matter": "^0.2.3",
-    "hexo-fs": "^0.2.3",
+    "hexo-fs": "^1.0.2",
     "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-baidu-sitemap": "^0.1.2",
+    "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
-    "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-json-content": "^4.1.6",
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.2",
-    "npm": "^6.1.0",
-    "valine": "^1.1.9-beta9"
+    "hexo-server": "^0.3.3",
+    "next-util": "github:theme-next/next-util",
+    "npm": "^6.11.2",
+    "valine": "^1.3.9"
   }
 }
